package map;

public class GPS1 implements IGPS {
    
}