package map;

public class Graveyard {
    
}