package map;

public final class EmptySlot extends Being {

    public EmptySlot() {
        super("empty", ' ');
    }
}